# chainer-trt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nora_calib.py  setup.py
benchmark/: CMakeLists.txt  argmax.cpp  bench_main.cpp  broadcast_to.cpp  directed_pooling.cpp  resize.cpp  shift.cpp
docker/: Dockerfile
example_external_plugin/: CMakeLists.txt  cmdline.c  cmdline.ggo  cmdline.h  dump_network.py  increment_kernel.cu  increment_plugin.cpp
example_imagenet/: CMakeLists.txt  dump_caffemodel.py  dump_chainer.py  imagenet_infer_reference.py  imagenet_infer_reference_eval.py  imagenet_infer_tensorrt.py
example_imagenet/imagenet_infer/: CMakeLists.txt  cmdline.c  cmdline.ggo  cmdline.h  imagenet_infer.cpp
example_imagenet/imagenet_infer_fast/: CMakeLists.txt  cmdline.c  cmdline.ggo  cmdline.h  imagenet_infer_fast.cpp
example_imagenet/imagenet_tensorrt_builder/: CMakeLists.txt  cmdline.c  cmdline.ggo  cmdline.h  imagenet_tensorrt_builder.cpp
example_yolo/: dump_yolo.py  yolo_infer_tensorrt.py
images/: concept_diagram.graphml
include/chainer_trt/: chainer_trt.hpp  plugin.hpp  profiling.hpp  utils.hpp
libpyrt/: CMakeLists.txt  libpyrt.cpp
python/chainer_trt/: __init__.py  _version.py  dla_support.py  dummy_python_interface.py  functions.py  json_encoder.py  model_retriever.py  python_interface.py
src/: buffer.cpp  chainer_trt.cpp  infer.cpp  model.cpp  profiling.cpp  utils.cpp
src/cuda/: argmax.cu  broadcast_to.cu  constant_eltw.cu  directed_pooling.cu  half.cu  leaky_relu.cu  resize.cu  resize_argmax.cu  shift.cu  slice.cu  sum.cu  transpose.cu  where.cu
src/include/: chainer_trt_impl.hpp
src/include/cuda/: cuda_kernels.hpp
src/include/helper/: macros.hpp
src/include/plugins/: argmax.hpp  broadcast_to.hpp  constant_elementwise.hpp  directed_pooling.hpp  leaky_relu.hpp  plugins.hpp  plugins_base.hpp  resize.hpp  resize_argmax.hpp  shift.hpp  slice.hpp  sum.hpp  where.hpp
src/plugins/: argmax.cpp  broadcast_to.cpp  constant_elementwise.cpp  directed_pooling.cpp  leaky_relu.cpp  plugins.cpp  resize.cpp  resize_argmax.cpp  shift.cpp  slice.cpp  sum.cpp  where.cpp
test/: CMakeLists.txt  chainer_trt.cpp  make_test_cases.py  model.cpp  test_helper.cpp  test_helper.hpp  test_main.cpp
test/fixtures/chainer_trt/named_net/: AddConstant-0-1_constant.weights  in.csv  model.json  out.csv
test/fixtures/chainer_trt/raw_binding/: ConstantInput-0.tensor  in1.csv  in2.csv  model.json  out.csv
test/fixtures/plugins/argmax/1x5x5/: in.csv  out.csv
test/fixtures/plugins/argmax/8x5x5/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case0/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case1/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case2/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case3/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case4/: in.csv  out.csv
test/fixtures/plugins/broadcast_to/case5/: in.csv  out.csv
test/fixtures/plugins/directed_pooling/bottom_small/: in.csv  out.csv
test/fixtures/plugins/directed_pooling/left_small/: out.csv
test/fixtures/plugins/directed_pooling/right_small/: out.csv
test/fixtures/plugins/directed_pooling/top_small/: out.csv
test/fixtures/plugins/resize/expand_by_1_3/: out.csv
test/fixtures/plugins/resize/expand_by_2/: out.csv
test/fixtures/plugins/resize/shrink_by_0_6/: out.csv
test/fixtures/plugins/resize/shrink_by_4/: out.csv
test/fixtures/plugins/resize/w0_3x_h0_6x/: out.csv
test/fixtures/plugins/resize/w0_6x_h0_3x/: out.csv
test/fixtures/plugins/resize/w0_6x_h1_3x/: in.csv  out.csv
test/fixtures/plugins/resize/w1_3x_h0_6x/: out.csv
test/fixtures/plugins/resize/w1_3x_h2x/: out.csv
test/fixtures/plugins/resize/w1h1_2x/: in.csv  model.json  out.csv
test/fixtures/plugins/resize/w1h2_2x/: in.csv  model.json  out.csv
test/fixtures/plugins/resize/w2h1_2x/: in.csv  model.json  out.csv
test/fixtures/plugins/resize/w2x_h1_3x/: in.csv  out.csv
test/fixtures/plugins/shift/k3d1/: in.csv  out.csv
test/fixtures/plugins/shift/k3d2/: out.csv
test/fixtures/plugins/shift/k3d3/: out.csv
test/fixtures/plugins/shift/k3d4/: out.csv
test/fixtures/plugins/shift/k3dy1dx3/: out.csv
test/fixtures/plugins/shift/k3dy3dx1/: in.csv  out.csv
test/fixtures/plugins/shift/k5d1/: in.csv  out.csv
test/fixtures/plugins/shift/k5d2/: out.csv
test/fixtures/plugins/shift/k5d3/: out.csv
test/fixtures/plugins/shift/kh1kw3d1/: out.csv
test/fixtures/plugins/shift/kh3kw1d1/: out.csv
test/fixtures/plugins/sum/case1/: in.csv  model.json  out.csv
test/fixtures/plugins/sum/case2/: in.csv  model.json  out.csv
test/fixtures/plugins/where/: in1.csv  in2.csv  in3.csv  model.json  out.csv
test/fixtures/regression_tests/: sample_input.npy
test/plugins/: argmax.cpp  broadcast_to.cpp  constant_elementwise.cpp  directed_pooling.cpp  resize.cpp  shift.cpp  slice.cpp  sum.cpp  where.cpp
test/test_libpyrt/: libpyrt_test.py  libpyrt_test_helper.py
test/test_model_retriever/: helper.py  inputs_test.py  multiple_outputs_test.py
tools/: CMakeLists.txt
tools/tensorrt_builder/: CMakeLists.txt  cmdline.c  cmdline.ggo  cmdline.h  tensorrt_builder.cpp
